# youbot-ros-pkg

youbot_applications/hanoi/: CMakeLists.txt  package.xml
youbot_applications/youbot_applications/: CMakeLists.txt  package.xml
youbot_arm_kinematics/: CMakeLists.txt
youbot_arm_kinematics/scripts/: fk_test  node_kinematics.py  node_kinematics_control.py  node_kinematics_info.py  node_manual_control.py
youbot_arm_kinematics/src/youbot_arm_kinematics/: kinematics.py
youbot_common/: CMakeLists.txt  package.xml
youbot_common/youbot_description/: CMakeLists.txt  controller_plugins.xml  package.xml
youbot_common/youbot_description/launch/: xacroload.launch  youbot_arm_publisher.launch  youbot_arm_publisher_no_x.launch  youbot_base_publisher.launch  youbot_base_publisher_no_x.launch  youbot_publisher.launch
youbot_common/youbot_description/meshes/sensors/: yb_cam.stl
youbot_common/youbot_description/robots/: youbot.urdf.xacro
youbot_common/youbot_description/src/: cartesian_compliance_control.cpp  joint_position_control.cpp  youbot_universal_control.cpp
youbot_common/youbot_description/urdf/: common.xacro
youbot_common/youbot_description/urdf/sensors/: yb_cam.urdf.xacro
youbot_common/youbot_description/urdf/youbot_arm/: arm.urdf.xacro
youbot_common/youbot_description/urdf/youbot_base/: base.transmission.xacro  base.urdf.xacro
youbot_common/youbot_trajectory_action_server/: CMakeLists.txt  package.xml
youbot_diagnostics/: package.xml
youbot_diagnostics/youbot_battery_monitor/: CMakeLists.txt  package.xml
youbot_diagnostics/youbot_dashboard/: CMakeLists.txt  package.xml
youbot_diagnostics/youbot_diagnostic_aggregator/: CMakeLists.txt  package.xml
youbot_drivers/: package.xml
youbot_drivers/youbot_oodl/: CMakeLists.txt  package.xml
youbot_drivers/youbot_oodl/launch/: youbot_all.launch  youbot_camera.launch  youbot_joint_state_publisher.launch
youbot_manipulation/: package.xml
youbot_manipulation/simple_trajectory_controller/: CMakeLists.txt  package.xml
youbot_manipulation/youbot_manipulation/: package.xml
youbot_navigation/: CMakeLists.txt  package.xml
youbot_navigation/youbot_navigation_common/: CMakeLists.txt  package.xml
youbot_navigation/youbot_navigation_global/: CMakeLists.txt  package.xml
youbot_navigation/youbot_navigation_local/: CMakeLists.txt  package.xml
youbot_perception/: CMakeLists.txt  package.xml
youbot_perception/tower_of_hanoi_sdk/: CMakeLists.txt  package.xml
youbot_perception/youbot_navigation/: package.xml
youbot_perception/youbot_registration/: CMakeLists.txt  package.xml
