<package>
  <name>youbot_diagnostics</name>
  <version>1.0.0</version>
  <description>youbot_diagnostics</description>
  <maintainer email="test@test.org">Maintained by Frederik Hegger</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/youbot_diagnostics</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Maintained by Frederik Hegger</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->


  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>youbot_diagnostic_aggregator</run_depend>
  <run_depend>youbot_dashboard</run_depend>
  <run_depend>youbot_battery_monitor</run_depend>

  <!-- Dependencies needed only for running tests. -->







</package>
