<package>
  <name></name>
  <version>1.0.0</version>
  <description>youbot_drivers</description>
  <maintainer email="">Maintained by Sebastian Blumenthal</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/youbot_drivers</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Maintained by Sebastian Blumenthal</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->


  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>youbot_oodl</run_depend>

  <!-- Dependencies needed only for running tests. -->







</package>
