<package>
  <name>youbot_navigation</name>
  <version>1.0.0</version>
  <description>youbot_navigation</description>
  <maintainer email="test@test.org">Alexey Zakharov</maintainer>

  <license>LGPL</license>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/youbot_common</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Alexey Zakharov</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->


  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>youbot_navigation_local</run_depend>
  <run_depend>youbot_navigation_global</run_depend>
  <run_depend>youbot_navigation_common</run_depend>

  <!-- Dependencies needed only for running tests. -->







</package>
