<package>
  <name>hanoi</name>
  <version>1.0.0</version>
  <description>hanoi</description>
  <maintainer email="">Malte Vesper</maintainer>
  <maintainer email="">Steffen Waeldele</maintainer>

  <license>LGPL</license>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hanoi</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Malte Vesper</author>
  <author>Steffen Waeldele</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>brics_actuator</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>arm_navigation_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>brics_actuator</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>arm_navigation_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>brics_actuator</test_depend> -->
  <!-- <test_depend>trajectory_msgs</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>arm_navigation_msgs</test_depend> -->

</package>