<package>
  <name>youbot_applications</name>
  <version>1.0.0</version>
  <description>Contains various sample, demo or experimental applications for the KUKA youBot.</description>
  <maintainer email="">Sebastian Blumenthal</maintainer>

  <license>LGPL</license>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/youbot_applications</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Sebastian Blumenthal</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->


  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>hanoi</run_depend>

  <!-- Dependencies needed only for running tests. -->







</package>
