<package>
  <name>youbot_description</name>
  <version>1.0.0</version>
  <description>youbot_description</description>
  <maintainer email="">Alexey Zakharov</maintainer>
  <maintainer email="">Sebastian Blumenthal</maintainer>

  <license>LGPL</license>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/youbot_description</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Alexey Zakharov</author>
  <author>Sebastian Blumenthal</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>brics_actuator</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pr2_controller_interface</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>pr2_controllers_msgs</build_depend>
  <build_depend>realtime_tools</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>youbot_trajectory_action_server</build_depend>
  <build_depend>pr2_gazebo_plugins</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>brics_actuator</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>pr2_controller_interface</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>pr2_controllers_msgs</run_depend>
  <run_depend>realtime_tools</run_depend>
  <run_depend>orocos_kdl</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>youbot_trajectory_action_server</run_depend>
  <run_depend>pr2_gazebo_plugins</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>robot_state_publisher</test_depend> -->
  <!-- <test_depend>urdf</test_depend> -->
  <!-- <test_depend>trajectory_msgs</test_depend> -->
  <!-- <test_depend>brics_actuator</test_depend> -->
  <!-- <test_depend>nav_msgs</test_depend> -->
  <!-- <test_depend>pr2_controller_interface</test_depend> -->
  <!-- <test_depend>control_toolbox</test_depend> -->
  <!-- <test_depend>pr2_controllers_msgs</test_depend> -->
  <!-- <test_depend>realtime_tools</test_depend> -->
  <!-- <test_depend>orocos_kdl</test_depend> -->
  <!-- <test_depend>sensor_msgs</test_depend> -->
  <!-- <test_depend>control_msgs</test_depend> -->
  <!-- <test_depend>actionlib</test_depend> -->
  <!-- <test_depend>youbot_trajectory_action_server</test_depend> -->
  <!-- <test_depend>pr2_gazebo_plugins</test_depend> -->

<export>
    <pr2_controller_interface plugin="${prefix}/controller_plugins.xml"/>
    <cpp cflags="-I${prefix}/include"/>
</export>

</package>