<package>
  <name>youbot_diagnostic_aggregator</name>
  <version>1.0.0</version>
  <description>youbot_diagnostic_aggregator</description>
  <maintainer email="test@test.org">Frederik Hegger</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/youbot_diagnostic_aggregator</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Frederik Hegger</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>diagnostic_aggregator</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>diagnostic_aggregator</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>diagnostic_aggregator</test_depend> -->

</package>
