<package>
  <name>youbot_oodl</name>
  <version>1.0.0</version>
  <description>youbot_oodl</description>
  <maintainer email="">Sebastian Blumenthal</maintainer>

  <license>LGPL</license>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/youbot_oodl</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Sebastian Blumenthal</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>std_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>brics_actuator</build_depend>
  <build_depend>youbot_driver</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>pr2_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>brics_actuator</run_depend>
  <run_depend>youbot_driver</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>pr2_msgs</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>tf</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>nav_msgs</test_depend> -->
  <!-- <test_depend>std_srvs</test_depend> -->
  <!-- <test_depend>trajectory_msgs</test_depend> -->
  <!-- <test_depend>brics_actuator</test_depend> -->
  <!-- <test_depend>youbot_driver</test_depend> -->
  <!-- <test_depend>control_msgs</test_depend> -->
  <!-- <test_depend>actionlib</test_depend> -->
  <!-- <test_depend>diagnostic_msgs</test_depend> -->
  <!-- <test_depend>pr2_msgs</test_depend> -->

<export>
    <cpp lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib `rosboost-cfg --lflags thread`" cflags="-I${prefix}/cfg/cpp -I${prefix}/include `rosboost-cfg --cflags`"/>
</export>

</package>