<package>
  <name>youbot_manipulation</name>
  <version>1.0.0</version>
  <description>The youbot_manipulation stack contains algorithms for generation of trajectories for the KUKA youBot manipulator.</description>
  <maintainer email="test@test.org">Sebastian Blumenthal</maintainer>

  <license>LGPL</license>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/youbot_manipulation</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Sebastian Blumenthal</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->


  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>simple_trajectory_controller</run_depend>

  <!-- Dependencies needed only for running tests. -->







</package>
