<package>
  <name>youbot_navigation_common</name>
  <version>1.0.0</version>
  <description>Common files for local and local navigation of the youBot</description>
  <maintainer email="">Alexey Zakharov</maintainer>

  <license>LGPL</license>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/youbot_oodl</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Alexey Zakharov</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>hokuyo_node</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>hokuyo_node</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>roscpp</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>hokuyo_node</test_depend> -->

</package>