<package>
  <name>youbot_navigation_global</name>
  <version>1.0.0</version>
  <description>Global navigation</description>
  <maintainer email="">Alexey Zakharov</maintainer>
  <maintainer email="">Sebastian Blumenthal</maintainer>

  <license>LGPL</license>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/youbot_navigation_global</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Alexey Zakharov</author>
  <author>Sebastian Blumenthal</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>amcl</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>amcl</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>amcl</test_depend> -->

</package>